test/langtools/tools/javac/SuperInit/NewLocalNotInInner.out
NewLocalNotInInner.java:12:21: compiler.err.local.cant.be.inst.static: kindname.class, Local
NewLocalNotInInner.java:22:21: compiler.err.local.cant.be.inst.static: kindname.class, Local
NewLocalNotInInner.java:32:21: compiler.err.local.cant.be.inst.static: kindname.class, Local
NewLocalNotInInner.java:42:21: compiler.err.local.cant.be.inst.static: kindname.class, Local
NewLocalNotInInner.java:52:21: compiler.err.local.cant.be.inst.static: kindname.class, Local
5 errors
